# todo-api-fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_app.py
alembic/: env.py
alembic/versions/: 14133bd41564_create_users_and_todos_tables.py  d5cdd8e8bd03_add_priority_to_todos.py
app/: app.py  auth.py  db.py  db_models.py  models.py
