[project]
name = "to-do-list-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt<4.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"